Use Bach.java to build module de.sormuras.bach